--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -1,117 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/bg_l_amap"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:gravity="center"
-        android:lines="1"
-        android:text="导航"
-        android:textColor="@android:color/white"
-        app:layout_heightPercent="12%h"
-        app:layout_marginTopPercent="3%h"
-        app:layout_textSizePercent="7%h" />
+    android:background="@drawable/n_dh_bg"
+    android:orientation="vertical"
+    tools:ignore="HardcodedText">
 
     <com.zhy.android.percent.support.PercentRelativeLayout
-        android:id="@+id/ll_icon"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_heightPercent="55%h"
-        app:layout_widthPercent="55%h">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_marginLeftPercent="3%h"
+        app:layout_marginRightPercent="3%h">
 
-        <ImageView
-            android:id="@+id/iv_icon"
+        <com.zhy.android.percent.support.PercentFrameLayout
+            android:id="@+id/fl_top"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_centerInParent="true"
-            android:scaleType="fitCenter"
-            app:layout_heightPercent="66%h"
-            app:layout_widthPercent="66%h" />
-    </com.zhy.android.percent.support.PercentRelativeLayout>
+            app:layout_heightPercent="14%h">
 
-    <com.zhy.android.percent.support.PercentFrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_heightPercent="30%h">
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                android:lines="1"
+                android:text="导航"
+                app:layout_marginBottomPercent="7%h"
+                app:layout_textSizePercent="34%h" />
+        </com.zhy.android.percent.support.PercentFrameLayout>
+
+        <com.zhy.android.percent.support.PercentFrameLayout
+            android:id="@+id/fl_luxian"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@id/fl_top"
+            android:background="@mipmap/n_dh_db"
+            app:layout_heightPercent="18%h" />
 
         <LinearLayout
             android:id="@+id/ll_controller"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
             android:gravity="center"
-            android:orientation="horizontal"
-            app:layout_heightPercent="66%h">
+            android:orientation="vertical"
+            app:layout_heightPercent="12%h">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#dbe2e5" />
 
             <com.zhy.android.percent.support.PercentLinearLayout
-                android:id="@+id/btn_go_home"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center">
+                android:orientation="horizontal">
 
-                <ImageView
+                <com.zhy.android.percent.support.PercentLinearLayout
+                    android:id="@+id/btn_go_home"
                     android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:src="@mipmap/ic_jia"
-                    app:layout_heightPercent="60%w"
-                    app:layout_widthPercent="60%w" />
-            </com.zhy.android.percent.support.PercentLinearLayout>
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    app:layout_widthPercent="100%h">
 
-            <com.zhy.android.percent.support.PercentLinearLayout
-                android:id="@+id/btn_go_company"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center">
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:src="@mipmap/n_dh_bz"
+                        app:layout_heightPercent="60%h"
+                        app:layout_widthPercent="60%h" />
+                </com.zhy.android.percent.support.PercentLinearLayout>
 
-                <ImageView
+                <TextView
                     android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:src="@mipmap/ic_gongsi"
-                    app:layout_heightPercent="60%w"
-                    app:layout_widthPercent="60%w" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="测试文字"
+                    app:layout_textSizePercent="55%h" />
+
+                <com.zhy.android.percent.support.PercentLinearLayout
+                    android:id="@+id/btn_go_company"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    app:layout_widthPercent="100%h">
+
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:src="@mipmap/n_dh_close"
+                        app:layout_heightPercent="60%h"
+                        app:layout_widthPercent="60%h" />
+                </com.zhy.android.percent.support.PercentLinearLayout>
             </com.zhy.android.percent.support.PercentLinearLayout>
         </LinearLayout>
 
-        <com.zhy.android.percent.support.PercentLinearLayout
-            android:id="@+id/ll_navi"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:visibility="gone">
 
-            <TextView
-                android:id="@+id/tv_road"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center_horizontal|bottom"
-                android:paddingBottom="5dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:text="500米后 胶州路"
-                android:textColor="#f1f1f1"
-                app:layout_textSizePercent="18%h" />
+        <!--<com.zhy.android.percent.support.PercentRelativeLayout-->
+        <!--android:id="@+id/ll_icon"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--app:layout_heightPercent="55%h"-->
+        <!--app:layout_widthPercent="55%h">-->
 
-            <TextView
-                android:id="@+id/tv_msg"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center_horizontal|top"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="5dp"
-                android:text="剩余20公里"
-                android:textColor="#f1f1f1"
-                app:layout_textSizePercent="18%h" />
-        </com.zhy.android.percent.support.PercentLinearLayout>
-    </com.zhy.android.percent.support.PercentFrameLayout>
+        <!--<ImageView-->
+        <!--android:id="@+id/iv_icon"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:scaleType="fitCenter"-->
+        <!--app:layout_heightPercent="66%h"-->
+        <!--app:layout_widthPercent="66%h" />-->
+        <!--</com.zhy.android.percent.support.PercentRelativeLayout>-->
+
+        <!--<com.zhy.android.percent.support.PercentFrameLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--app:layout_heightPercent="30%h">-->
+
+        <!--<com.zhy.android.percent.support.PercentLinearLayout-->
+        <!--android:id="@+id/ll_navi"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="vertical"-->
+        <!--android:visibility="gone">-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/tv_road"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:gravity="center_horizontal|bottom"-->
+        <!--android:paddingLeft="10dp"-->
+        <!--android:paddingRight="10dp"-->
+        <!--android:paddingBottom="5dp"-->
+        <!--android:text="500米后 胶州路"-->
+        <!--android:textColor="#f1f1f1"-->
+        <!--app:layout_textSizePercent="18%h" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/tv_msg"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:gravity="center_horizontal|top"-->
+        <!--android:paddingLeft="10dp"-->
+        <!--android:paddingTop="5dp"-->
+        <!--android:paddingRight="10dp"-->
+        <!--android:text="剩余20公里"-->
+        <!--android:textColor="#f1f1f1"-->
+        <!--app:layout_textSizePercent="18%h" />-->
+        <!--</com.zhy.android.percent.support.PercentLinearLayout>-->
+        <!--</com.zhy.android.percent.support.PercentFrameLayout>-->
+    </com.zhy.android.percent.support.PercentRelativeLayout>
 </com.zhy.android.percent.support.PercentLinearLayout>
